sumo/tests/traci/Scenario/DomainTL/InvalidObjectId/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:53:20 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Scenario>:
  flag=0 domain=2 domainId=-1 variable=13 valueDataType=0 [no value sent]
.. Answered with error to command (115), [description: Unable to retrieve traffic light with given id]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
